--- a/basic-css-drills-part2/css/drill.css
+++ b/basic-css-drills-part2/css/drill.css
@@ -63,20 +63,21 @@
 
 /* Drill 13 - Write your code solution below */
 
-#d13-div2 {
+#d13-div1 {
     text-align: center;
-    font-weight: 900;
+}
+
+#d13-div2 {
+    font-weight: bold;
     font-size: 12px;
 }
 
 #d13-div3 {
-    text-align: center;
     font-weight: 500;
     font-size: 48px;
 }
 
 #d13-div4 {
-    text-align: center;
     font-style: italic;
     font-weight: 400;
     font-size: 24px;
