--- a/demos/combining-selectors-demo/css/style.css
+++ b/demos/combining-selectors-demo/css/style.css
@@ -5,9 +5,64 @@
 }
 
 div#navbar a {
-    color: white;
+    color: pink;
+    text-decoration: none;
+    margin: 10px;
+    display: inline-block;
+    transition: font-size 0.5s, color 0.5s;
 }
 
 div#navbar > a {
     color: white;
 }
+
+div#navbar a:hover {
+    font-size: 24px;
+    color: #65e22b;
+}
+
+p {
+    font-size: 18px;
+    letter-spacing: 1px;
+    a {
+        color: palevioletred;
+        font-weight: bold;
+        &:hover {
+            color: #65e22b;
+        }
+    }
+}
+
+p.warning a {
+    color: #65e22b;
+}
+
+ul {
+    color: blueviolet;
+}
+
+ul a {
+    color: goldenrod;
+}
+
+ul p a {
+    color: #26a87d;
+}
+
+ul div a {
+    color: #e7460c;
+}
+
+
+
+/*Level of specificity: 
+    Let's say a basic HTML element selector has a specificity level of 0-0-1.
+    Each additional basic HTML element will add 0-0-1.
+
+    If a class is involved, a single class is set to 0-1-0.
+    So, for each class, that is 0-1-0.
+
+    If an ID is involved, a single ID level is set to 1-0-0.
+    So, for each ID involved, that is 1-0-0.
+ 
+Class cannot overide ID without ID being present*/
