--- a/containers-selectors-drills/css/drill.css
+++ b/containers-selectors-drills/css/drill.css
@@ -1,19 +1,29 @@
 /* Drill 1 - Write your code solution below */
 
-
+div .orange {
+    color: #23d81d;
+}
 
 /* Drill 2 - Write your code solution below */
 
-
+div .purple {
+    color: red;
+}
 
 /* Drill 3 - Write your code solution below */
 
-
+div .dashed p span {
+    color: magenta;
+}
 
 /* Drill 4 - Write your code solution below */
 
-
+div .shadowed p {
+    background-color: skyblue;
+}
 
 /* Drill 5 - Write your code solution below */
 
-
+div .dog-days > img {
+    border-radius: 180%;
+}
