--- a/demos/two-column-layout-flex-demo/css/style.css
+++ b/demos/two-column-layout-flex-demo/css/style.css
@@ -10,7 +10,7 @@ body {
 
 /* 
     Two Column Styles 
-    
+
     While display: flex; is technically the only property/value pair that
     you need to set up a two column layout with flex, remember
     to use other properties to make it look well, designed, and intuitive.
@@ -20,12 +20,27 @@ body {
     display: flex;
 }
 #sidebar {
-    width: 200px;
-    background-color: #704c92;
-    order: 2;
+    width: 250px;
+    background-color: #9480a7;
+    padding: 24px;
+    border-right: 2px solid #594c64;
+    h2 {
+        border-bottom: 2px solid #594c64;
+        padding-bottom: 5px;
+    }
+    ul {
+        list-style-type: none;
+        padding: 0px;
+    }
+    ul a {
+        color: #111;
+        text-decoration: none;
+    }
+    ul li {
+        padding: 4px 0px;
+    }
 }
 #main {
-    background-color: rgb(96, 96, 170);
+    padding: 48px;
     flex: 1;
-    order: 1;
 }
