--- a/wiki-with-sidebar/css/style.css
+++ b/wiki-with-sidebar/css/style.css
@@ -43,5 +43,20 @@ body {
 #main h2 {
     background-color: #e6d7f8;
     border-radius: 15%;
+    border-bottom: 4px solid black;
+}
+
+#main h3 {
+    border-bottom: 4px solid;
+}
+
+.p1 {
+    display: inline-block;
+    width: 50%;
+}
+
+.tarot-1 {
+    padding-bottom: 100px;
+    padding-left: 60px;
 }
 
