--- a/blog-with-sidebar/css/style.css
+++ b/blog-with-sidebar/css/style.css
@@ -12,6 +12,8 @@ body {
     background-image: 
         url(https://images.unsplash.com/photo-1627764574768-539effd9af35?q=80&w=1032&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D);
     background-size: contain;
+    background-blend-mode: luminosity;
+    background-color: black;
 }
 
 #two-columns {
