--- a/product-showcase-site/css/style.css
+++ b/product-showcase-site/css/style.css
@@ -1,90 +1,196 @@
+/* Resets */
 * {
     box-sizing: border-box;
 }
 body {
     margin: 0px;
     font-family: sans-serif;
-    background-color: black;
+    background-color: darkslategrey;
 }
 
-
-.logo {
-    width: 200px;
-    margin: 10px;
-    background-color: rgb(219, 217, 217);
-    border-radius: 50%;
-    margin-bottom: 20px;
-}
-
-.set1 {
-    width: 300px;
+/* Header */
+#logo {
     margin: 0px;
+    padding-left: 25px;
+}
+#header {
+    display: grid;
+    background-color: #e6e6e6;
+    height: 120px;
+    border-bottom-left-radius: 20%;
+    border-bottom-right-radius: 20%;
+    display: inline-block;
+    width: 100%;
 }
 
-.container-1 {
-    text-align: center;
-    background-color: #f5f5f5;
-    width: 50%; 
-    min-width: 500px
-}
-
-.container-1 {
+.column {
+    width: 30%;
+    max-width: 1440px;
     margin: 0px auto;
-    margin-top: 50px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 
-        'Lucida Sans', Arial, sans-serif;
-    font-size: 15px;
 }
-
-h1 {
-    font-size: 60px;
-    color: #ffffff;
+#img-card {
+    #new53 {
+        border-radius: 15%;
+        box-shadow: 8px 8px 20px black;
+    }
     text-align: center;
-    background-color: rgb(190, 144, 106);
+    color: #e6e6e6;
+    margin: 15px;
 }
 
-.container-2 {
-    margin: 0px auto;
-    margin-top: 50px;
-    padding: 48px 0px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 
-        'Lucida Sans', Arial, sans-serif;
-    font-size: 15px;
+/* Flex */ 
+#flex {
+    background-color: #e6e6e6;
+}
+#products {
     text-align: center;
-    background-color: #c26916;
-    width: 50%; 
-    min-width: 500px
+    color: #000000;
+    padding: 15px;
+    text-decoration: underline 2px;
 }
 
-.set2 {
+#left {
+    display: flex;
+    padding-left: 50px;
+}
+/* card 1 */
+#card1 {
+    display: inline-block;
+    flex: 1;
+}
+#color-block {
+    width: 250px;
+    text-align: center;
+}
+#color-block2 {
+    width: 250px;
+    text-align: center;
+    font-size: 14px;
+}
+/* card 2 */
+#card2 {
+    display: inline-block;
+    flex: 1;
+}
+#color-block1 {
+    width: 250px;
+    text-align: center;
+}
+#color-block3 {
+    width: 250px;
+    text-align: center;
+    font-size: 14px;
+}
+/* card 3 */
+#card3 {
+    display: inline-block;
+    flex: 1;
+}
+#color-block2 {
+    width: 250px;
+    text-align: center;
+}
+#color-block4 {
+    width: 250px;
+    text-align: center;
+    font-size: 14px;
+}
+
+#block {
+    border-radius: 15%;
+    box-shadow: 8px 8px 8px #808080;
+}
+
+/* Sec3 */
+#flex2 {
+    background-color: darkslategrey;
+    width: 100%;
+    color: #e6e6e6;
+}
+/* card 1 */
+#card4 {
+    display: inline-block;
+    flex: 1;
+}
+#color-block {
+    width: 250px;
+    text-align: center;
+}
+#color-block2 {
+    width: 250px;
+    text-align: center;
+    font-size: 14px;
+}
+/* card 2 */
+#card5 {
+    display: inline-block;
+    flex: 1;
+}
+#color-block1 {
+    width: 250px;
+    text-align: center;
+}
+#color-block3 {
+    width: 250px;
+    text-align: center;
+    font-size: 14px;
+}
+/* card 3 */
+#card6 {
+    display: inline-block;
+    flex: 1;
+}
+#color-block2 {
+    width: 250px;
+    text-align: center;
+}
+#color-block4 {
+    width: 250px;
+    text-align: center;
+    font-size: 14px;
+}
+#feat {
+    text-align: center;
+    text-decoration: 2px underline;
+    padding: 20px;
+    color: #e6e6e6;
+}
+#button {
+    display: block;
     width: 300px;
-    margin: 0px;
-}
-
-.container-3 {
-    margin: 0px auto;
-    margin-top: 50px;
-    padding: 48px 0px;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 
-        'Lucida Sans', Arial, sans-serif;
-    font-size: 15px;
+    padding: 8px 20px;
+    background-color: #e6e6e6;
+    color: #000000;
+    border-radius: 25px;
     text-align: center;
-    background-color: #565588;
-    width: 50%; 
-    min-width: 500px
+    margin: 12px;
+    font-weight: bold;
+    text-decoration: none;
+    margin-left: 355px;
 }
 
-.set3 {
-    width: 300px;
-    margin: 0px;
+#media {
+    text-decoration: none;
+    color: #e6e6e6;
+}
+#mix {
+    text-decoration: none;
+    color: #e6e6e6;
+}
+#basic {
+    text-decoration: none;
+    color: #e6e6e6;
 }
 
-.button {
-    
-    color: white;
-    text-align: center;
-    background-color: grey;
-    border-radius: 50%;
-    width: 90px;
-    margin: 10% auto;
+#sofft {
+    text-decoration: none;
+    color: #000000;
+}
+#mediums {
+    text-decoration: none;
+    color: #000000;
+}
+#colors {
+    text-decoration: none;
+    color: #000000;
 }
