--- a/product-showcase-site/css/style.css
+++ b/product-showcase-site/css/style.css
@@ -163,7 +163,7 @@ body {
     color: #000000;
     border-radius: 25px;
     text-align: center;
-    margin: 12px;
+    margin: 12px auto;
     font-weight: bold;
     text-decoration: none;
 }
