--- a/animagram-cards/css/style.css
+++ b/animagram-cards/css/style.css
@@ -9,7 +9,7 @@
 */
 
 .card-style-2 {
-    max-width: 350px;
+    max-width: 358px;
     margin: 16px;
     background-color: white;
     padding: 20px;
@@ -40,8 +40,8 @@ p {
 
 .animagram-footer {
     font-size: 24px;
-}
-
-i {
-    margin-left: 22px;
+    display: flex;
+    align-items: flex-start;
+    gap: 40px;
+    justify-content: center;
 }
