--- a/animagram-cards/css/style.css
+++ b/animagram-cards/css/style.css
@@ -25,7 +25,7 @@
 
 .brand-name {
     font-size: 28px;
-    margin-left: 100px;
+    margin-top: 14px;
 }
 
 h2 {
@@ -44,4 +44,9 @@ p {
     align-items: flex-start;
     gap: 40px;
     justify-content: center;
+}
+
+.animagram-header {
+    display: flex;
+    justify-content: space-between;
 }
