--- a/pokemon-cards/css/style.css
+++ b/pokemon-cards/css/style.css
@@ -7,18 +7,74 @@
     Just be aware that you may break some
     of the setup.css styling if you do so.
 */
-
-/* resets */
-* {
-    box-sizing: border-box;
+.card-style-3 {
+    background-color: palegoldenrod;
+    width: 350px;
+    border: gold solid 16px;
+    border-radius: 12px;
+    padding: 16px;
+    display: flex;
+    flex-direction: column;
 }
-body {
+.cardd-style-3 .pokemon-header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.card-style-3 .pokemon-header h2 {
     margin: 0px;
-    font-family: sans-serif;
-    background-color: #141414;
+}
+.card-style-3 .pokemon-header .health {
+    font-size: 18px;
+}
+.card-style-3 img {
+    width: 100%;
+    border: 5px solid goldenrod;
+}
+.card-style-3 .details {
+    background-color: goldenrod;
+    font-size: 12px;
+    font-style: italic;
+    font-weight: bold;
+    text-align: center;
+    margin-top: 4px;
+}
+.card-style-3 .attack {
+    flex: 1;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 16px 0px;
+    margin: 8px 0px;
+    border-bottom: 0px;
+}
+.card-style-3 .description {
+    font-size: 14px;
+    margin: 0px 4px;
+}
+.card-style-3 .description .bold {
+    font-weight: bold;
+    font-size: 18px;
+}
+.card-style-3 .power {
+    font-weight: bold;
+    font-size: 24px;
+}
+.card-style-3 .data {
+    font-size: 11px;
+    font-weight: bold;
+    border: 2px solid goldenrod;
+    padding: 2px 8px;
 }
 
-/* content */
+/* .card-style-3 .pokemon-header h2 {
+    margin: 0px;
+}
+.card-style-3 .pokemon-header {
+    justify-content: space-between;
+    display: flex;
+    align-items: center;
+}
 .card-style-3 {
     max-width: 358px;
     margin: 16px;
@@ -31,10 +87,10 @@ body {
 .card-style-3 img {
     width: 300px;
     border: #c2a500 solid 5px;
-}
+} */
 
 /* All */
-.pokemon-header {
+/* .pokemon-header {
     display: grid;
     grid-template-columns: 1fr 1fr;
     gap: 65px;
@@ -59,10 +115,10 @@ h2 {
 }
 .health {
     font-size: 20px;
-}
+} */
 
 /* Card1 */
-#pokemon-card-1 .data {
+/* #pokemon-card-1 .data {
     border: 1px solid goldenrod;
     font-size: 12px;
 }
@@ -79,10 +135,10 @@ h2 {
     margin-top: 45px;
     font-weight: bold;
     font-size: 24px;
-}
+} */
 
 /* Card 2 */
-#pokemon-card-2 .data {
+/* #pokemon-card-2 .data {
     border: 1px solid goldenrod;
     font-size: 12px;
 }
@@ -99,10 +155,10 @@ h2 {
     margin-top: 30px;
     font-weight: bold;
     font-size: 24px;
-}
+} */
 
 /* Card 3 */
-#pokemon-card-3 .data {
+/* #pokemon-card-3 .data {
     border: 1px solid goldenrod;
     font-size: 12px;
 }
@@ -129,10 +185,10 @@ h2 {
 }
 #pokemon-card-3 .attack {
     border-top: none;
-}
+} */
 
 /* card 4 */
-#pokemon-card-4 .data {
+/* #pokemon-card-4 .data {
     border: 1px solid #daa520;
     font-size: 12px;
 }
@@ -152,4 +208,4 @@ h2 {
 }
 #pokemon-card-4 .attack {
     border-top: none;
-}
+} */
