--- a/demos/heroes-demo/css/style.css
+++ b/demos/heroes-demo/css/style.css
@@ -7,7 +7,7 @@ body {
     font-family: sans-serif;
 }
 
-/* content */
+/* hero1 */
 #hero-1 {
     height: 100vh;
     background-image: url("../images/lizard.jpg");
@@ -25,6 +25,7 @@ body {
     left: 20%;
 }
 
+/* hero2 */
 #hero-2 {
     background-image: url(../images/lonely-ocean.jpg);
     height: 100vh;
@@ -61,15 +62,79 @@ body {
     bottom: 41%;
 }
 
+/* hero3 */
 #hero-3 {
     background-image: url("../images/orange-wildflowers.jpg");
     background-size: cover;
     height: 100vh;
     background-position: center center;
     position: relative;
+    margin-bottom: 100px;
 }
 #hero-3 .hero-content {
     position: absolute;
     top: 10%;
     left: 15%;
+}
+#hero-3 h2 {
+    font-size: 72px;
+    margin-bottom: 36px;
+}
+#hero-3 h4 {
+    font-size: 24px;
+    margin: 0px;
+}
+#hero-3 a {
+    font-size: 14px;
+    display: inline-block;
+    background-color: #333;
+    color: white;
+    text-decoration: none;
+    padding: 24px;
+    margin-top: 36px;
+    margin-right: 24px;
+}
+
+/* hero4 */
+#hero-4 {
+    background-image: url("../images/stars-on-velvet.jpg");
+    background-size: cover;
+    background-position: center center;
+    height: 100vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+#hero-4 .hero-content {
+    color: white;
+    text-align: center;
+    padding-top: 100px;
+}
+#hero-4 h2 {
+    font-size: 72px;
+    margin-bottom: 36px;
+}
+#hero-4 h4 {
+    font-size: 24px;
+    margin: 0px;
+}
+#hero-4 a {
+    font-size: 14px;
+    display: inline-block;
+    background-color: white;
+    color: #333;
+    text-decoration: none;
+    padding: 24px;
+    margin-top: 36px;
+    margin-right: 12px;
+    margin-left: 12px;
+}
+
+/* parallax */
+.parallax-banner {
+    height: 50vh;
+    margin: 100px 0px;
+    background-image: url("../images/emerald-seas.jpg");
+    background-size: cover;
+    background-attachment: fixed;
 }
