--- a/demos/galleries-demo/css/style.css
+++ b/demos/galleries-demo/css/style.css
@@ -13,3 +13,55 @@ body {
     margin: 48px auto;
     text-align: center;
 }
+
+/* Basic Grid Gallery Styles - Portrait and Landscape */
+.basic-grid-gallery {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    /* ^^same as 1fr 1fr 1fr */
+    padding: 24px;
+    border: 10px solid #0b0d6c;
+    gap: 50px 24px;
+}
+.basic-grid-gallery img {
+    width: 100%;
+}
+
+/* Mixed Gallery Styles */
+.cropped-grid-gallery {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr;
+    grid-auto-rows: 200px;
+    gap: 24px;
+    padding: 24px;
+    border: 10px solid #248d73;
+}
+.cropped-grid-gallery img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+/* Horizontal Masonry Gallery Styles */
+.horizontal-masonry-gallery {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 24px;
+    border: 10px solid #751414;
+}
+.horizontal-masonry-gallery img {
+    height: 250px;
+    flex: 1;
+    object-fit: cover;
+}
+
+/* Vertical Masonry Gallery Styles */
+.vertical-masonry-gallery {
+    columns: 3 auto;
+    column-gap: 24px;
+    border: 10px solid #e08516;
+}
+.vertical-masonry-gallery img {
+    width: 100%;
+    margin-bottom: 24px;
+}
