--- a/product-comparison-page/css/style.css
+++ b/product-comparison-page/css/style.css
@@ -1,5 +1,65 @@
+body {
+    background-image: url(../images/background2.jpg);
+    background-size: cover;
+}
+
+/* Layout */
 #single-column {
-    max-width: 1200px;
+    max-width: 900px;
     margin: 48px auto;
     text-align: center;
+    background-color: #ffffff;
+    padding: 40px;
+    border-radius: 20%;
+}
+
+/* Cards */
+#cards {
+    display: flex;
+    align-items: baseline;
+    gap: 50px;
+    margin-top: 40px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+#single-column h1 {
+    margin-top: 5px;
+}
+#cards img {
+    width: 100%;
+}
+#card1 {
+    margin-bottom: 0px;
+}
+#card2 {
+    margin-bottom: 0px;
+}
+#card3 {
+    margin-bottom: 0px;
+}
+
+#grid {
+    display: grid;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    grid-template-areas: 
+        "one two three four"
+        "five six seven eight"
+        "nine ten elevel twelve"
+        "thirteen fourteen fifteen sixteen";
+}
+#grid #price {
+    grid-area: one;
+    width: 20px;
+}
+#grid #con {
+    grid-area: five;
+    width: 20px;
+}
+#grid #rot {
+    grid-area: nine;
+    width: 20px;
+}
+#grid #mat {
+    grid-area: thirteen;
+    width: 20px;
 }
