--- a/demos/media-queries-demo/css/style.css
+++ b/demos/media-queries-demo/css/style.css
@@ -58,6 +58,59 @@ img {
     color: #ffb700
 }
 
+#featured {
+    background-color: #222;
+    padding: 24px 0px;
+    color: white;
+}
+
+#featured h2 {
+    text-align: center;
+    font-size: 36px;
+}
+
+.grid img {
+    height: 300px;
+    border-radius: 24px;
+}
+
+.grid {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    gap: 16px;
+    grid-template-areas: 
+        "txt1 img1 img2 img2"
+        "img3 img3 img4 txt2"
+    ;
+}
+#p1 {
+    grid-area: txt1;
+}
+#p2 {
+    grid-area: txt2;
+}
+#img1 {
+    grid-area: img1;
+}
+#img2 {
+    grid-area: img2;
+}
+#img3 {
+    grid-area: img3;
+}
+#img4 {
+    grid-area: img4;
+}
+
+.grid p {
+    border: 2px solid #ffb700;
+    border-radius: 24px;
+    padding: 20px;
+    margin: 0px;
+    display: flex;
+    align-items: center;
+}
+
 /* Media Queries should always be the last thing in your CSS,
 because they overwrite what is above it. For them to work, they
 have to be the last thing read. */
@@ -71,6 +124,15 @@ have to be the last thing read. */
     }
     .content h1 {
         font-size: 28px;
+    }
+    .grid {
+        grid-template-columns: 1fr 1fr;
+        grid-template-areas: 
+            "txt1 img1"
+            "img2 img2"
+            "img3 img3"
+            "img4 txt2"
+        ;
     }
 }
 
@@ -91,6 +153,17 @@ have to be the last thing read. */
     .img-container {
         flex: 200px;
         width: 100%;
+    }
+    .grid {
+        grid-template-columns: 1fr;
+        grid-template-areas: 
+            "txt1"
+            "img1"
+            "img2"
+            "img3"
+            "img4"
+            "txt2"
+        ;
     }
 }
 
