--- a/grrm/css/style.css
+++ b/grrm/css/style.css
@@ -455,13 +455,14 @@ body {
         ;
     }
     #header h1 {
-        font-size: 50px;
+        font-size: 48px;
     }
     #nav {
         flex-wrap: wrap;
     }
     #nav a {
-        flex: 90px;
+        flex: 190px;
+        border-bottom: 2px solid #777;
     }
 }
 /* Mobile */
@@ -481,27 +482,31 @@ body {
             "bottom"
         ;
     }
-    #shield-image {
-        display: none;
-    }
-    #social-section form {
+    #shield-image, form {
         display: none;
     }
     #header {
         flex-direction: column;
+        align-items: center;
     }
     #header h1 {
-        font-size: 40px;
+        font-size: 36px;
     }
     #nav {
         flex-wrap: wrap;
     }
     #nav a {
-        flex: 60px;
+        flex: 150px;
+        border-bottom: 2px solid #777;
     }
-    #card-3 {
-        margin-right: none;
-        padding-left: none;
-        background-color: none;
+    #banner-container,
+    #card-1,
+    #card-2,
+    #card-3,
+    #aside,
+    #main {
+        margin: 0px;
+        padding: 0px;
+        background-color: transparent;
     }
 }
